Fix integration chart being cropped on wide screens (#675)

--- a/static/sass/_pattern-p-integration-charts.scss
+++ b/static/sass/_pattern-p-integration-charts.scss
@@ -93,10 +93,4 @@
       text-decoration: underline;
     }
   }
-
-  @media (min-width: $breakpoint-large) {
-    .integration-modal {
-      overflow: hidden;
-    }
-  }
 }
